fixed overflow on navbar

--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -1,44 +1,43 @@
 .navbar {
-    width: 100%;
-    background: var(--color-secondary);
-    color: #fff;
-    height: 60px;
+  width: 100%;
+  background: var(--color-secondary);
+  color: #fff;
+  height: 80px;
 
-    &__links {
-        padding: 1em;
+  &__links {
+    padding-top: 1em;
+  }
+
+  h3 {
+    border: 3px solid rgba(0, 0, 0, 0.1);
+    padding: 0 1em;
+  }
+
+  a {
+    font-size: 0.9rem;
+    padding: 10px;
+
+    &:hover,
+    &:focus {
+      border-bottom: 2px solid #fff;
     }
+  }
+
+  ul {
+    margin-top: 0.5em;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
+  @media (max-width: 800px) {
+    height: 110px;
 
     h3 {
-        border: 3px solid rgba(0, 0, 0, 0.1);
-        padding: 0 1em;
+      display: none;
     }
 
-    a {
-        font-size: 0.9rem;
-        padding: 10px;
-
-        &:hover,
-        &:focus {
-            border-bottom: 2px solid #fff;
-        }
+    &__links {
+      flex-direction: column;
     }
-    
-    ul {
-        margin-top: 0.5em;
-        padding: 10px;
-        background-color: rgba(0, 0, 0, 0.1);
-    }
-    
-    @media (max-width: 800px) {
-        height: 110px;
-
-
-        h3 {
-            display: none;
-        }
-
-        &__links {
-            flex-direction: column;
-        }
-    }
+  }
 }
